tooling/nargo_cli/tests/snapshots/execution_success/loop/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "six_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7WUTW6DMBCFoaFq3TRS1Sg5xwy28XiXRS5iAj5Hjh5QxmJEfhaJeRIag+Hzm2fhsphUFrdKzw5cNTTG9K7uUWOA2rdkwdi2ISS0ZLuatO7JkPOtd+DR6B6j9TrCVZIF76kZvVVPvD/qZc9Vcf0Q86t8/lDN1s3JpyF1dae/jP61Yma5DB8Sf6H84Ys5x/PEl72kdb+H61eMNzzePPl+Se/D3holmLn5g3D7wP+oNefwN+tVZldk9LIupn+xOufv1xFA8rxi/qfoV6oS8/L9Hd//zDJIZ9DhRZ/RBYw6xGBD15lT+J/xR6U9GnO6AFeb+P+wBQAA",
  "debug_symbols": "pZDRCoMwDEX/Jc8+OKsM/JUxpNYohdCW2A6G+O+Lops+DAZ7SpPbcxPuBB22aWis6/0I9W2Cli2RHRryRkfrnUynOYO9bSIjyggOulBBM7oItUtEGTw0pfXTGLRba9Qsap4Buk6qGPaWcHnN2YfOv6OXQm3wpby+8epnXhXFxitV/ceX6sTfpdPG8ikxyOXQebFjq1vCLcU+OXMINT7DruyxB/YGu8S42K2aLHgB",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is basic looping.\nfn main(six_as_u32: u32) {\n    assert_eq(loop_excl(4), six_as_u32);\n    assert_eq(loop_incl(3), six_as_u32);\n    assert(plain_loop() == six_as_u32);\n    assert(never_loop() == 0);\n\n    // Safety: testing context\n    unsafe {\n        assert(basic_break() == true)\n    }\n}\n\nfn loop_excl(x: u32) -> u32 {\n    let mut sum = 0;\n    for i in 0..x {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn loop_incl(x: u32) -> u32 {\n    let mut sum = 0;\n    for i in 0..=x {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn plain_loop() -> u32 {\n    let mut sum = 0;\n    for i in 0..4 {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn never_loop() -> u32 {\n    let mut sum = 0;\n    for i in 4..0 {\n        sum = sum + i;\n    }\n    sum\n}\n\nunconstrained fn basic_break() -> bool {\n    for idx_e in 0..5 {\n        if (idx_e < 5) { break; };\n    }\n    true\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "basic_break"
  ]
}
